--- a/package.json
+++ b/package.json
@@ -14,17 +14,13 @@
   "engines": {
     "node": ">=0.12.0"
   },
-  "build": {
-    "version": "0.29.1",
-    "target": "./build"
-  },
+  "config": {},
   "scripts": {
-    "start": "electron .",
-    "clean": "rm -rf $npm_package_build_target",
-    "build": "if [ -z $PLATFORM ]; then PLATFORM=all; fi; if [ -z $ARCH ]; then ARCH=all; fi; electron-packager . $npm_package_productName --out=$npm_package_build_target --platform=$PLATFORM --arch=$ARCH --prune --asar --version=$npm_package_build_version",
-    "build:darwin": "PLATFORM=darwin ARCH=x64 npm run packager",
-    "build:win32": "PLATFORM=win32 ARCH=all npm run packager",
-    "build:linux": "PLATFORM=linux ARCH=all npm run packager"
+    "copy": "cpy './**/*.*' ../debug --parents --cwd=app --ignore='./**/*.jsx,./**/*.es6'",
+    "babel": "babel app -d debug",
+    "app": "mkdir -p debug; npm run babel; npm run copy; electron ./debug",
+    "clean": "rm -rf $npm_package_configs_build debug",
+    "build": "if [ -z $PLATFORM ]; then PLATFORM=all; fi; if [ -z $ARCH ]; then ARCH=all; fi; electron-packager ./debug $npm_package_productName --out=./build --platform=$PLATFORM --arch=$ARCH --prune --asar --version=0.29.1"
   },
   "files": [
     "index.js",
@@ -35,6 +31,7 @@
     "electron-app"
   ],
   "devDependencies": {
+    "cpy": "git://github.com/ragingwind/cpy",
     "electron-packager": "5.0.0",
     "electron-prebuilt": "^0.29.1"
   },
