--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   },
   "config": {},
   "scripts": {
-    "copy": "cpy './**/*.*' '!./**/*.jsx' '!./**/*.es6' ../debug --parents --cwd=app",
-    "babel": "babel app -d debug",
-    "app": "mkdir -p debug; npm run babel; npm run copy; electron ./debug",
-    "clean": "rm -rf $npm_package_configs_build debug",
-    "build": "if [ -z $PLATFORM ]; then PLATFORM=all; fi; if [ -z $ARCH ]; then ARCH=all; fi; electron-packager ./debug $npm_package_productName --out=./build --platform=$PLATFORM --arch=$ARCH --prune --asar --version=0.29.1"
+    "copy": "cpy './**/*.*' '!./**/*.jsx' '!./**/*.es6' ../build --parents --cwd=app",
+    "babel": "babel app -d build",
+    "build": "mkdir -p build; npm run babel; npm run copy",
+    "app": "npm run build; electron ./build",
+    "clean": "rm -rf build package",
+    "package": "if [ -z $PLATFORM ]; then PLATFORM=all; fi; if [ -z $ARCH ]; then ARCH=all; fi; electron-packager ./build $npm_package_productName --out=./package --platform=$PLATFORM --arch=$ARCH --prune --asar --version=0.29.1"
   },
   "files": [
     "index.js",
