--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "bare-electron-react",
-  "productName": "Electron with React",
+  "productName": "Electron",
   "version": "0.0.0",
-  "description": "Electron with React",
+  "description": "Bare project for Electron and React",
   "license": "MIT",
   "main": "index.js",
   "repository": "ragingwind/bare-electron-react",
   "author": {
     "name": "ragingwind",
     "email": "ragingwind@gmail.com",
-    "url": "ragingwind.me"
+    "url": "http://ragingwind.me"
   },
   "engines": {
-    "node": ">=0.12.0"
+    "node": ">=4"
   },
-  "config": {},
   "scripts": {
     "copy": "cpy './**/*.*' '!./**/*.jsx' '!./**/*.es6' ../build --parents --cwd=app",
     "babel": "babel app -d build",
@@ -25,16 +24,19 @@
   },
   "files": [
     "index.js",
-    "index.html",
-    "index.css"
+    "build"
   ],
   "keywords": [
     "electron-app"
   ],
   "devDependencies": {
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
     "cpy": "^3.4.0",
     "electron-packager": "5.0.0",
-    "electron-prebuilt": "^0.29.1"
+    "electron-prebuilt": "^0.29.1",
+    "webpack": "^1.12.2",
+    "webpack-hot-middleware": "^2.2.0"
   },
   "dependencies": {
     "babel": "^5.8.5",
